Add unix signal handlers so that we can quite the mainloop and terminate cleanly when Ctrl-C or SIGTERM. This allows better debugging of accounts-daemon, allows stuff to run after main() returns, such as gcov hooks.
Created attachment 78410 [details] [review] Quit properly when receiving SIGINT or SIGTERM This allows us to better debug accounts-daemon, as well as use tools like git coverage on it.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.