Quit properly when receiving SIGINT or SIGTERM

This allows us to better debug accounts-daemon, as well as
use tools like git coverage on it.

https://bugs.freedesktop.org/show_bug.cgi?id=63869